# bitwarden-to-keepass

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bitwarden-to-keepass.ps1  bitwarden-to-keepass.py  docker-compose.yaml  entrypoint.sh  folder.py  item.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish.yml
src/: bitwarden_to_keepass.py  folder.py  item.py  set_kp_entry_urls.py
